--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ numpy=1.26.2=pypi_0
 openai=1.4.0=pypi_0
 openssl=3.2.0=h0d3ecfb_1
 packaging=23.2=pyhd8ed1ab_0
+pandas=2.1.4=pypi_0
 parso=0.8.3=pyhd8ed1ab_0
 pexpect=4.8.0=pyh1a96a4e_2
 pickleshare=0.7.5=py_1003
@@ -65,6 +66,7 @@ pygments=2.17.2=pyhd8ed1ab_0
 python=3.11.5=hb885b13_0
 python-dateutil=2.8.2=pyhd8ed1ab_0
 python-dotenv=1.0.0=pypi_0
+pytz=2023.3.post1=pypi_0
 pyyaml=6.0.1=pypi_0
 pyzmq=25.1.0=py311h313beb8_0
 readline=8.2=h1a28f6b_0
@@ -84,7 +86,7 @@ tqdm=4.66.1=pypi_0
 traitlets=5.14.0=pyhd8ed1ab_0
 typing-inspect=0.9.0=pypi_0
 typing_extensions=4.9.0=pyha770c72_0
-tzdata=2023c=h04d1e81_0
+tzdata=2023.4=pypi_0
 urllib3=2.1.0=pypi_0
 wcwidth=0.2.12=pyhd8ed1ab_0
 wheel=0.41.2=py311hca03da5_0
