--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,12 @@ dataclasses-json=0.6.3=pypi_0
 debugpy=1.6.7=py311h313beb8_0
 decorator=5.1.1=pyhd8ed1ab_0
 distro=1.8.0=pypi_0
+docarray=0.40.0=pypi_0
 exceptiongroup=1.2.0=pyhd8ed1ab_0
 executing=2.0.1=pyhd8ed1ab_0
 frozenlist=1.4.1=pypi_0
 h11=0.14.0=pypi_0
+hnswlib=0.8.0=pypi_0
 httpcore=1.0.2=pypi_0
 httpx=0.25.2=pypi_0
 idna=3.6=pypi_0
@@ -40,8 +42,10 @@ langsmith=0.0.71=pypi_0
 libcxx=16.0.6=h4653b0c_0
 libffi=3.4.4=hca03da5_0
 libsodium=1.0.18=h27ca646_1
+markdown-it-py=3.0.0=pypi_0
 marshmallow=3.20.1=pypi_0
 matplotlib-inline=0.1.6=pyhd8ed1ab_0
+mdurl=0.1.2=pypi_0
 multidict=6.0.4=pypi_0
 mypy-extensions=1.0.0=pypi_0
 ncurses=6.4=h313beb8_0
@@ -49,6 +53,7 @@ nest-asyncio=1.5.8=pyhd8ed1ab_0
 numpy=1.26.2=pypi_0
 openai=1.4.0=pypi_0
 openssl=3.2.0=h0d3ecfb_1
+orjson=3.9.10=pypi_0
 packaging=23.2=pyhd8ed1ab_0
 pandas=2.1.4=pypi_0
 parso=0.8.3=pyhd8ed1ab_0
@@ -57,6 +62,7 @@ pickleshare=0.7.5=py_1003
 pip=23.3.1=py311hca03da5_0
 platformdirs=4.1.0=pyhd8ed1ab_0
 prompt-toolkit=3.0.42=pyha770c72_0
+protobuf=4.25.2=pypi_0
 psutil=5.9.0=py311h80987f9_0
 ptyprocess=0.7.0=pyhd3deb0d_0
 pure_eval=0.2.2=pyhd8ed1ab_0
@@ -72,6 +78,7 @@ pyzmq=25.1.0=py311h313beb8_0
 readline=8.2=h1a28f6b_0
 regex=2023.12.25=pypi_0
 requests=2.31.0=pypi_0
+rich=13.7.0=pypi_0
 setuptools=68.2.2=py311hca03da5_0
 six=1.16.0=pyh6c4a22f_0
 sniffio=1.3.0=pypi_0
@@ -84,6 +91,7 @@ tk=8.6.12=hb8d0fd4_0
 tornado=6.3.3=py311h80987f9_0
 tqdm=4.66.1=pypi_0
 traitlets=5.14.0=pyhd8ed1ab_0
+types-requests=2.31.0.20240106=pypi_0
 typing-inspect=0.9.0=pypi_0
 typing_extensions=4.9.0=pyha770c72_0
 tzdata=2023.4=pypi_0
